// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`YouTubePublishButton > matches snapshot in default state 1`] = `
<button
  class="inline-flex items-center rounded-md border border-transparent bg-red-600 px-4 py-2 text-sm font-semibold text-white shadow-sm hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-red-500 focus:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-70"
  type="button"
>
  Publish episode
</button>
`;

exports[`YouTubePublishButton > matches snapshot in disabled state 1`] = `
<button
  class="inline-flex items-center rounded-md border border-transparent bg-red-600 px-4 py-2 text-sm font-semibold text-white shadow-sm hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-red-500 focus:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-70"
  disabled=""
  type="button"
>
  Publish episode
</button>
`;

exports[`YouTubePublishButton > matches snapshot in loading state 1`] = `
<button
  class="inline-flex items-center rounded-md border border-transparent bg-red-600 px-4 py-2 text-sm font-semibold text-white shadow-sm hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-red-500 focus:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-70"
  disabled=""
  type="button"
>
  Publishing to YouTube…
</button>
`;
